...
                    android:text="Don't have an account ? "
                    android:textSize="14dp"
                    android:layout_marginBottom="15dp"
                    android:textColor="@color/colorWhite"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/tvReg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Register"
                    android:textSize="14dp"
                    android:layout_marginBottom="5dp"
                    android:textColor="@color/colorGray02"
...
